--- a/wadaeaf.html
+++ b/wadaeaf.html
@@ -8,7 +8,7 @@
     <meta name="description" content="programmers Libyan">
     <meta name="keywords" content="program , html, css , php , barmaja,">
     <link rel="stylesheet" href="style.css"/>
-    <link rel="icon" href="icons/orca.ico"/>
+    <link rel="icon" href="icons/iconpig (1).ico"/>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic&family=Lato:wght@100;300;400;700;900&family=Noto+Sans+Arabic&family=Oswald:wght@200;300;400;500;600;700&family=Rowdies:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&family=IBM+Plex+Sans+Arabic&family=Lato:wght@100;300;400;700;900&family=Noto+Sans+Arabic&family=Oswald:wght@200;300;400;500;600;700&family=Rowdies:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
