--- a/wadaeaf.html
+++ b/wadaeaf.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LPA.ly</title>
+    <title>الخدمات</title>
     <meta name="description" content="programmers Libyan">
     <meta name="keywords" content="program , html, css , php , barmaja,">
     <link rel="stylesheet" href="style.css"/>
@@ -18,7 +18,7 @@
     <section class="services">
         <nav>
     
-            <h2><span2>ABDO </span2> STORE</h2>
+            <h2><span1>ABDO </span1> STORE</h2>
             <ul id="actions">
         
                 <li><a href="index.html" style="color: #ffffff;"> العوده الى الصفحه الرئيسه</a></li>
