--- a/wadaeaf.html
+++ b/wadaeaf.html
@@ -18,7 +18,7 @@
     <section class="services">
         <nav>
     
-            <h2><span1>ABDO </span1> STORE</h2>
+            <h2><span>ABDO </span> STORE</h2>
             <ul id="actions">
         
                 <li><a href="index.html" style="color: #ffffff;"> العوده الى الصفحه الرئيسه</a></li>
